Added project office and NAU channel

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,19 @@ main {
   display: flex;
   justify-content: center;
 }
+
+.footer {
+  padding: 20px;
+  text-align: center;
+  border-top: 1px solid #e7e7e7;
+  margin-top: 30px;
+}
+
+.footer a {
+  color: #007bff; /* Синій колір посилання */
+  text-decoration: none;
+}
+
+.footer a:hover {
+  text-decoration: underline;
+}
